--- a/index.html
+++ b/index.html
@@ -15,93 +15,95 @@
 </head>
 
 <body>
+  <main class="container">
 
-  <section class="section section__rating">
-    <div class="section__content">
-      <h1>10,000+ of our users love our products.</h1>
-      <p>We only provide great products combined with excellent customer service.
-        See what our satisfied customers are saying about our services.</p>
-    </div>
-    <div class="secttion__stars">
-      <div class="rating__card">
-        <span class="rating__stars">
-          <img src="images/icon-star.svg" alt="star" />
-          <img src="images/icon-star.svg" alt="star" />
-          <img src="images/icon-star.svg" alt="star" />
-          <img src="images/icon-star.svg" alt="star" />
-          <img src="images/icon-star.svg" alt="star" />
-        </span>
-        <p class="rating__text">Rated 5 Stars in Reviews</p>
+    <section class="section rating__section">
+      <div class="rating__content">
+        <h1 class="rating__title">10,000+ of our users love our products.</h1>
+        <p class="rating__description">We only provide great products combined with excellent customer service.
+          See what our satisfied customers are saying about our services.</p>
       </div>
+      <div class="rating__container">
+        <div class="rating__card">
+          <span class="rating__stars">
+            <img src="images/icon-star.svg" alt="star" />
+            <img src="images/icon-star.svg" alt="star" />
+            <img src="images/icon-star.svg" alt="star" />
+            <img src="images/icon-star.svg" alt="star" />
+            <img src="images/icon-star.svg" alt="star" />
+          </span>
+          <p class="rating__text">Rated 5 Stars in Reviews</p>
+        </div>
 
-      <div class="rating__card">
-        <span class="rating__stars">
-          <img src="images/icon-star.svg" alt="star" />
-          <img src="images/icon-star.svg" alt="star" />
-          <img src="images/icon-star.svg" alt="star" />
-          <img src="images/icon-star.svg" alt="star" />
-          <img src="images/icon-star.svg" alt="star" />
-        </span>
-        <p class="rating__text">Rated 5 Stars in Report Guru</p>
-      </div>
+        <div class="rating__card">
+          <span class="rating__stars">
+            <img src="images/icon-star.svg" alt="star" />
+            <img src="images/icon-star.svg" alt="star" />
+            <img src="images/icon-star.svg" alt="star" />
+            <img src="images/icon-star.svg" alt="star" />
+            <img src="images/icon-star.svg" alt="star" />
+          </span>
+          <p class="rating__text">Rated 5 Stars in Report Guru</p>
+        </div>
 
-      <div class="rating__card">
-        <span class="rating__stars">
-          <img src="images/icon-star.svg" alt="star" />
-          <img src="images/icon-star.svg" alt="star" />
-          <img src="images/icon-star.svg" alt="star" />
-          <img src="images/icon-star.svg" alt="star" />
-          <img src="images/icon-star.svg" alt="star" />
-        </span>
-        <p class="rating__text">Rated 5 Stars in BestTech</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="section section__testimonials">
-    <article class="testimonial__card">
-      <div class="testimonial__header">
-        <img class="testimonial__image" src="images/image-colton.jpg" alt="colton image">
-        <div class="testimonial__profile">
-          <h2 class="profile__name">Colton Smith</h2>
-          <p class="profile__tag">Verified Buyer</p>
+        <div class="rating__card">
+          <span class="rating__stars">
+            <img src="images/icon-star.svg" alt="star" />
+            <img src="images/icon-star.svg" alt="star" />
+            <img src="images/icon-star.svg" alt="star" />
+            <img src="images/icon-star.svg" alt="star" />
+            <img src="images/icon-star.svg" alt="star" />
+          </span>
+          <p class="rating__text">Rated 5 Stars in BestTech</p>
         </div>
       </div>
-      <div class="testimonial__body">
-        <p>"We needed the same printed design as the one we had ordered a week prior.
-          Not only did they find the original order, but we also received it in time.
-          Excellent!"</p>
-      </div>
-    </article>
+    </section>
 
-    <article class="testimonial__card">
-      <div class="testimonial__header">
-        <img class="testimonial__image" src="images/image-irene.jpg" alt="irene image">
-        <div class="testimonial__profile">
-          <h2 class="profile__name">Irene Roberts</h2>
-          <p class="profile__tag">Verified Buyer</p>
+    <section class="section section__testimonials">
+      <article class="testimonial__card">
+        <div class="testimonial__header">
+          <img class="testimonial__image" src="images/image-colton.jpg" alt="colton image">
+          <div class="testimonial__profile">
+            <h2 class="profile__name">Colton Smith</h2>
+            <p class="profile__tag">Verified Buyer</p>
+          </div>
         </div>
-      </div>
-      <div class="testimonial__body">
-        <p>"Customer service is always excellent and very quick turn around. Completely
-          delighted with the simplicity of the purchase and the speed of delivery."</p>
-      </div>
-    </article>
+        <div class="testimonial__body">
+          <p>"We needed the same printed design as the one we had ordered a week prior.
+            Not only did they find the original order, but we also received it in time.
+            Excellent!"</p>
+        </div>
+      </article>
 
-    <article class="testimonial__card">
-      <div class="testimonial__header">
-        <img class="testimonial__image" src="images/image-anne.jpg" alt="anne image">
-        <div class="testimonial__profile">
-          <h2 class="profile__name">Anne Wallace</h2>
-          <p class="profile__tag">Verified Buyer</p>
+      <article class="testimonial__card">
+        <div class="testimonial__header">
+          <img class="testimonial__image" src="images/image-irene.jpg" alt="irene image">
+          <div class="testimonial__profile">
+            <h2 class="profile__name">Irene Roberts</h2>
+            <p class="profile__tag">Verified Buyer</p>
+          </div>
         </div>
-      </div>
-      <div class="testimonial__body">
-        <p>"Put an order with this company and can only praise them for the very high
-          standard. Will definitely use them again and recommend them to everyone!"</p>
-      </div>
-    </article>
-  </section>
+        <div class="testimonial__body">
+          <p>"Customer service is always excellent and very quick turn around. Completely
+            delighted with the simplicity of the purchase and the speed of delivery."</p>
+        </div>
+      </article>
+
+      <article class="testimonial__card">
+        <div class="testimonial__header">
+          <img class="testimonial__image" src="images/image-anne.jpg" alt="anne image">
+          <div class="testimonial__profile">
+            <h2 class="profile__name">Anne Wallace</h2>
+            <p class="profile__tag">Verified Buyer</p>
+          </div>
+        </div>
+        <div class="testimonial__body">
+          <p>"Put an order with this company and can only praise them for the very high
+            standard. Will definitely use them again and recommend them to everyone!"</p>
+        </div>
+      </article>
+    </section>
+  </main>
 
 </body>
 
