Completed testimonial card - mobile design

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <main class="container">
+  <main class="container main__container">
 
     <section class="section rating__section">
       <div class="rating__content">
@@ -61,13 +61,14 @@
 
     <section class="section section__testimonials">
       <article class="testimonial__card">
-        <div class="testimonial__header">
+        <header class="testimonial__header">
           <img class="testimonial__image" src="images/image-colton.jpg" alt="colton image">
+
           <div class="testimonial__profile">
             <h2 class="profile__name">Colton Smith</h2>
             <p class="profile__tag">Verified Buyer</p>
           </div>
-        </div>
+        </header>
         <div class="testimonial__body">
           <p>"We needed the same printed design as the one we had ordered a week prior.
             Not only did they find the original order, but we also received it in time.
